# spinludo

./: .env  Cargo.toml  README.md
src/: main.rs  main1.rs  tmp.rs
src/migrations/2025-03-08-setup-tables/: up.sql
static/: style.css
static/css/: landing.css  style.css
static/js/: main.js  script.js
templates/: index.html  landing.html
