[package]
name = "spinludo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-rt = "2"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "bigdecimal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
env_logger = "0.10"
dotenv = "0.15"
bigdecimal = { version = "0.3", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
actix-files = "0.6"
